--- a/QuanLiKho/App.config
+++ b/QuanLiKho/App.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QuanLiKho.Properties.Settings.KHOHANGHOAConnectionString"
-            connectionString="Data Source=.\SQLExpress;Initial Catalog=KHOHANGHOA;Integrated Security=SSPI;"
-            providerName="System.Data.SqlClient" />
+        <add name="QuanLiKho.Properties.Settings.KHOHANGHOAConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=KHOHANGHOA;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
